# mlx-stack

./: .gitignore  Makefile  README.md  go.mod
.beads/: issues.jsonl  metadata.json
Formula/: mlx-stack.rb
cmd/mlxctl/: add.go  add_test.go  bootstrap.go  chat.go  chat_filearg_test.go  chat_timeout_test.go  commands.go  config.go  config_migrate_test.go  list_test.go  main.go  main_test.go  monitor.go  offload.go  offload_test.go  output.go  output_test.go  reload_test.go  render.go  render_test.go  run.go  run_test.go  tail.go
cmd/mlxd/: live.go  live_test.go  main.go
deploy/: dev.grigsby.mlxd.plist.template
docs/: 2026-05-19-mlx-stack-design.md  2026-05-19-mlx-stack-phase-1-skeleton-chat.md  2026-05-19-mlx-stack-phase-2-tags.md  2026-05-19-mlx-stack-phase-3-embed.md  2026-05-19-mlx-stack-phase-4-audio.md  2026-05-19-mlx-stack-phase-5-cli-parity.md  2026-05-19-mlx-stack-phase-6-migrate-and-cutover.md  2026-05-19-mlx-stack-phase-7-observability.md  2026-05-19-mlx-stack-phase-8-unified-backends.md  2026-05-22-runtime-stability-and-samplers.md
docs/adr/: 0001-slots-replace-modes.md  (+1 more)
e2e/: e2e_test.go
legacy/: README.md  mlx  mlx-embed-server.py  mlx-router.py  mlx-server-launch.py  mlx.conf
python/: pyproject.toml
python/mlx_stack/: launcher_shim.py
python/mlx_stack/embed_server/: app.py
python/mlx_stack/memory/: janitor.py  memlog.py  watchdog.py
python/mlx_stack/patches/: timing.py  xtc.py
python/tests/: test_embed_server.py  test_janitor.py  test_launcher_shim.py  test_memlog.py  test_timing.py  test_watchdog.py  test_xtc.py
(+54 files in other folders)
